Bug 91425 - Fix compositing layers in columns when in paginated mode
Summary: Fix compositing layers in columns when in paginated mode
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Simon Fraser (smfr)
URL:
Keywords:
Depends on: 91490
Blocks:
  Show dependency treegraph
 
Reported: 2012-07-16 14:44 PDT by Simon Fraser (smfr)
Modified: 2012-07-17 10:37 PDT (History)
4 users (show)

See Also:


Attachments
Patch (4.75 KB, patch)
2012-07-16 14:47 PDT, Simon Fraser (smfr)
hyatt: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Fraser (smfr) 2012-07-16 14:44:23 PDT
Fix compositing layers in columns when in paginated mode
Comment 1 Simon Fraser (smfr) 2012-07-16 14:47:06 PDT
Created attachment 152617 [details]
Patch
Comment 2 Dave Hyatt 2012-07-16 15:14:15 PDT
Comment on attachment 152617 [details]
Patch

r=me
Comment 3 Simon Fraser (smfr) 2012-07-16 15:17:24 PDT
http://trac.webkit.org/changeset/122770
Comment 4 Balazs Kelemen 2012-07-17 06:02:11 PDT
This path made a bunch of tests (~160) fail on Qt-WK2. I hope you could take a look what could caused this. Bug report is bug 91490.