Fix compositing layers in columns when in paginated mode https://bugs.webkit.org/show_bug.cgi?id=91425

Reviewed by Dave Hyatt.

Source/WebCore:

Enhance a hack that was added to allow composited layers to
display in columns to work for paginated mode, where the
RenderView is renderer with columns.

Test: compositing/columns/composited-in-paginated.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::updateLayerPosition):

LayoutTests:

Testcase with a composited layer in a paginated document,
that dumps layers.

* compositing/columns/composited-in-paginated-expected.txt: Added.
* compositing/columns/composited-in-paginated.html: Added.

Canonical link: https://commits.webkit.org/109239@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122770 268f45cc-cd09-0410-ab3c-d52691b4dbfc